test_programs/compile_failure/noirc_frontend_tests_imports_warns_on_re_export_of_item_with_less_visibility/src/main.nr

    mod foo {
        mod bar {
            pub(crate) fn baz() {}
        }

        pub use bar::baz;
    }

    fn main() {
        foo::baz();
    }
    